<resources>
    <string name="app_name">Kaamchori</string>
    <string name="Recurring_Tasks">Recurring Tasks</string>
    <string name="One_time_tasks">One Time Tasks</string>
    <string name="Recurring_Tasks_Title">Recurring Tasks</string>
    <string name="test_button">Test button</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sample_date">10/11/12</string>
    <string name="r_period">R_Period</string>
    <string name="status">Status</string>
    <string name="TaskDescription">Task Description</string>
    <string name="startDate">Start Date</string>
    <string name="endDate">End Date</string>
    <string name="multipleTask">Multiple Tasks</string>
    <string name="frequency">Frequency</string>
    <string name="modify_recurring_task">Modify Recurring Task</string>
    <string name="modify_multiple_task">Modify Multiple Task</string>
    <string name="completed">Completed</string>
    <string name="remaining">Remaining</string>
    <string name="total">Total</string>
    <string name="hour_start">Hour Start</string>
    <string name="hour_end">Hour End</string>
    <string name="minute_start">Minute Start</string>
    <string name="minute_end">Minute End</string>
    <string name="second_start">Second Start</string>
    <string name="second_end">Second End</string>
</resources>