<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="15dp"
    android:layout_margin="10dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="15dp"
        android:background="@color/white">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxLength="15"
            android:id="@+id/item_recurring_tasks_title"
            android:text="@string/Recurring_Tasks"
            android:textSize="22sp"
            android:fontFamily="sans-serif-black"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_margin="15dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/item_recurring_tasks_start"
            android:text="@string/sample_date"
            android:textSize="22sp"
            android:fontFamily="sans-serif-black"
            app:layout_constraintTop_toBottomOf="@id/item_recurring_tasks_title"
            android:layout_marginStart="15dp"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@id/item_recurring_tasks_start"
            android:text="-"
            android:textSize="22sp"
            android:fontFamily="sans-serif-black"
            android:layout_marginStart="6dp"
            app:layout_constraintTop_toBottomOf="@id/item_recurring_tasks_title"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/item_recurring_tasks_end"
            android:text="@string/sample_date"
            android:textSize="22sp"
            android:fontFamily="sans-serif-black"
            app:layout_constraintTop_toBottomOf="@id/item_recurring_tasks_title"
            android:layout_marginStart="20dp"
            app:layout_constraintStart_toEndOf="@id/item_recurring_tasks_start"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/item_recurring_tasks_cycle"
            android:text="@string/r_period"
            android:textSize="22sp"
            android:fontFamily="sans-serif-black"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginEnd="15dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="5dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/item_recurring_tasks_status"
            android:text="@string/status"
            android:textSize="22sp"
            android:fontFamily="sans-serif-black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_margin="15dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/item_recurring_tasks_start_time"
            android:fontFamily="sans-serif-black"
            app:layout_constraintTop_toBottomOf="@id/item_recurring_tasks_start"
            android:text="00:00:00"
            android:textSize="17sp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="15dp"/>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/item_recurring_tasks_end_time"
            android:fontFamily="sans-serif-black"
            android:text="00:00:00"
            android:textSize="17sp"
            app:layout_constraintStart_toStartOf="@id/item_recurring_tasks_end"
            app:layout_constraintTop_toBottomOf="@id/item_recurring_tasks_end"/>





    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.cardview.widget.CardView>