<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/dark_white"
    tools:context=".FragmentTasksRecurringModify">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/modify_recurring_task_desc"
            android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ0123456789 "
            android:text="@string/modify_recurring_task"
            android:textSize="30sp"
            android:fontFamily="@font/montserratsemibold"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="30dp"/>


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/modify_recurring_task_title"
            app:hintEnabled="true"
            android:hint="@string/TaskDescription"
            android:layout_marginHorizontal="30dp"
            android:layout_marginTop="15dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:layout_constraintTop_toBottomOf="@id/modify_recurring_task_desc">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/modify_recurring_task_title_edit_text"
                android:fontFamily="@font/montserratsemibold"
                android:maxLength="25"
                android:textSize="25sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <DatePicker
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:datePickerMode="spinner"
            android:calendarViewShown="false"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="30dp"
            android:id="@+id/modify_recurring_task_start_date"
            app:layout_constraintTop_toBottomOf="@id/modify_recurring_task_title"/>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="90dp"
            android:layout_height="50dp"
            android:id="@+id/modify_recurring_task_hour_start"
            app:hintEnabled="true"
            android:hint="@string/hour_start"
            android:layout_marginHorizontal="30dp"
            android:layout_marginTop="25dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/modify_recurring_task_title">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/modify_recurring_task_hour_start_edit_text"
                android:fontFamily="@font/montserratsemibold"
                android:maxLength="25"
                android:textSize="10sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="90dp"
            android:layout_height="50dp"
            android:id="@+id/modify_recurring_task_minute_start"
            app:hintEnabled="true"
            android:hint="@string/minute_start"
            android:layout_marginHorizontal="30dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@id/modify_recurring_task_second_start"
            app:layout_constraintTop_toBottomOf="@id/modify_recurring_task_hour_start">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/modify_recurring_task_minute_start_edit_text"
                android:fontFamily="@font/montserratsemibold"
                android:maxLength="25"
                android:textSize="15sp" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="90dp"
            android:layout_height="50dp"
            android:id="@+id/modify_recurring_task_second_start"
            app:hintEnabled="true"
            android:hint="@string/second_start"
            android:layout_marginHorizontal="30dp"
            android:layout_marginTop="20dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginBottom="30dp"
            app:layout_constraintBottom_toBottomOf="@id/modify_recurring_task_start_date">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/modify_recurring_task_second_start_edit_text"
                android:fontFamily="@font/montserratsemibold"
                android:maxLength="25"
                android:textSize="15sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="90dp"
            android:layout_height="50dp"
            android:id="@+id/modify_recurring_task_hour_end"
            app:hintEnabled="true"
            android:hint="@string/hour_end"
            android:layout_marginHorizontal="30dp"
            android:layout_marginTop="25dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginBottom="20dp"
            app:layout_constraintTop_toTopOf="@id/modify_recurring_task_end_date">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/modify_recurring_task_hour_end_edit_text"
                android:fontFamily="@font/montserratsemibold"
                android:maxLength="25"
                android:textSize="15sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="90dp"
            android:layout_height="50dp"
            android:id="@+id/modify_recurring_task_minute_end"
            app:hintEnabled="true"
            android:hint="@string/minute_end"
            android:layout_marginHorizontal="30dp"
            android:layout_marginTop="20dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginBottom="20dp"
            app:layout_constraintTop_toTopOf="@id/modify_recurring_task_hour_end"
            app:layout_constraintBottom_toBottomOf="@id/modify_recurring_task_second_end">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/modify_recurring_task_minute_end_edit_text"
                android:fontFamily="@font/montserratsemibold"
                android:maxLength="25"
                android:textSize="15sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="90dp"
            android:layout_height="50dp"
            android:id="@+id/modify_recurring_task_second_end"
            app:hintEnabled="true"
            android:hint="@string/second_end"
            android:layout_marginHorizontal="30dp"
            android:layout_marginTop="20dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginBottom="30dp"
            app:layout_constraintBottom_toBottomOf="@id/modify_recurring_task_end_date">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/modify_recurring_task_second_end_edit_text"
                android:fontFamily="@font/montserratsemibold"
                android:maxLength="25"
                android:textSize="15sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <DatePicker
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/modify_recurring_task_end_date"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="30dp"
            app:layout_constraintTop_toBottomOf="@id/modify_recurring_task_start_date"
            android:datePickerMode="spinner"
            android:layout_marginTop="-40dp"
            android:calendarViewShown="false" />



        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:id="@+id/modify_recurring_task_frequency"
            app:hintEnabled="true"
            android:hint="@string/frequency"
            android:layout_marginHorizontal="30dp"
            android:layout_marginTop="-15dp"
            app:layout_constraintTop_toBottomOf="@id/modify_recurring_task_end_date">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:digits="0123456789"
                android:maxLength="5"
                android:id="@+id/modify_recurring_task_frequency_edit_text"
                android:fontFamily="@font/montserratsemibold"
                android:textSize="25sp" />
        </com.google.android.material.textfield.TextInputLayout>





        <android.widget.ToggleButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/modify_recurring_task_status"
            app:layout_constraintTop_toBottomOf="@id/modify_recurring_task_frequency"
            android:textOff="Status: Incomplete"
            android:textOn="Status: Completed"
            android:fontFamily="@font/montserratsemibold"
            android:layout_marginHorizontal="30dp"
            android:layout_marginTop="15dp"
            android:textColor="@color/light_black"
            android:textSize="20sp"
            android:checked="false" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/modify_recurring_task_save"
            app:layout_constraintTop_toBottomOf="@id/modify_recurring_task_status"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="SAVE INFORMATION"
            android:layout_marginTop="10dp"/>






    </androidx.constraintlayout.widget.ConstraintLayout>



</FrameLayout>