<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/dark_white"
    tools:context=".FragmentTasksRecurringModify">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/modify_recurring_task_desc"
            android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ0123456789 "
            android:text="@string/modify_multiple_task"
            android:textSize="30sp"
            android:fontFamily="@font/montserratsemibold"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="30dp"/>


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/modify_recurring_task_title"
            app:hintEnabled="true"
            android:hint="@string/TaskDescription"
            android:layout_marginHorizontal="30dp"
            android:layout_marginTop="15dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:layout_constraintTop_toBottomOf="@id/modify_recurring_task_desc">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/modify_recurring_task_title_edit_text"
                android:fontFamily="@font/montserratsemibold"
                android:maxLength="25"
                android:textSize="25sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <DatePicker
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:datePickerMode="spinner"
            android:calendarViewShown="false"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="30dp"
            android:id="@+id/modify_recurring_task_start_date"
            app:layout_constraintTop_toBottomOf="@id/modify_recurring_task_title"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toStartOf="@id/modify_recurring_task_start_date"
            android:id="@+id/modify_recurring_task_tv_start_date"
            android:text="Start:"
            app:layout_constraintTop_toTopOf="@id/modify_recurring_task_start_date"
            app:layout_constraintBottom_toBottomOf="@id/modify_recurring_task_start_date"
            android:layout_marginEnd="30dp"
            android:fontFamily="@font/montserratsemibold"
            android:textSize="25sp"/>

        <DatePicker
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/modify_recurring_task_end_date"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="30dp"
            app:layout_constraintTop_toBottomOf="@id/modify_recurring_task_start_date"
            android:datePickerMode="spinner"
            android:layout_marginTop="-40dp"
            android:calendarViewShown="false" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toStartOf="@id/modify_recurring_task_end_date"
            android:id="@+id/modify_recurring_task_tv_end_date"
            android:text="End:"
            app:layout_constraintTop_toTopOf="@id/modify_recurring_task_end_date"
            app:layout_constraintBottom_toBottomOf="@id/modify_recurring_task_end_date"
            android:layout_marginEnd="30dp"
            android:fontFamily="@font/montserratsemibold"
            android:textSize="25sp"/>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:id="@+id/modify_multiple_total"
            app:hintEnabled="true"
            android:hint="@string/total"
            android:layout_marginHorizontal="30dp"
            android:layout_marginTop="-15dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/modify_recurring_task_end_date">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:digits="0123456789"
                android:maxLength="5"
                android:id="@+id/modify_multiple_total_edit_text"
                android:fontFamily="@font/montserratsemibold"
                android:textSize="25sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:id="@+id/modify_multiple_completed"
            app:hintEnabled="true"
            android:hint="@string/completed"
            android:layout_marginHorizontal="30dp"
            android:layout_marginTop="-15dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/modify_recurring_task_end_date">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:digits="0123456789"
                android:maxLength="5"
                android:id="@+id/modify_multiple_completed_edit_text"
                android:fontFamily="@font/montserratsemibold"
                android:textSize="25sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="/"
            app:layout_constraintTop_toTopOf="@id/modify_multiple_completed"
            app:layout_constraintBottom_toBottomOf="@id/modify_multiple_completed"
            android:textSize="30sp"
            android:textAlignment="center"/>





        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/modify_recurring_task_save"
            app:layout_constraintTop_toBottomOf="@id/modify_multiple_completed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="SAVE INFORMATION"
            android:layout_marginTop="20dp"/>






    </androidx.constraintlayout.widget.ConstraintLayout>



</FrameLayout>